修复API密钥安全问题：使用Netlify环境变量
- 将硬编码的Firebase配置移动到环境变量
- 添加构建脚本以在部署时注入配置
- 更新netlify.toml以使用新的构建流程
- 添加配置验证和错误处理
- 创建部署说明文档

这解决了Netlify检测敏感信息和Firebase API密钥验证失败的问题

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "."
-  command = "echo 'No build step required for static HTML'"
+  command = "node build.js"
 
 [[redirects]]
   from = "/*"
@@ -9,3 +9,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
+
+# Environment variables will be injected at build time
+[build.processing]
+  skip_processing = false
