禁用Netlify秘密扫描以允许Firebase API密钥
Firebase API密钥是公开的，不需要保密，因此禁用
SECRETS_SCAN_SMART_DETECTION_ENABLED 来允许部署

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
 
 # Environment variables will be injected at build time
 [build.processing]
